[chordgraph] fix visibility of control panel

--- a/experiments/chordgraph-elm/src/main.css
+++ b/experiments/chordgraph-elm/src/main.css
@@ -19,6 +19,12 @@ body {
   align-items: stretch;
 }
 
+.control-panel {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 .key-map-root {
   display: flex;
   flex-direction: column;
